# networking-arista

./: .coveragerc  .gitignore  .gitreview  .mailmap  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  groups  lower-constraints.txt  openstack-common.conf  project.config  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: plugin.sh  settings
doc/source/: conf.py  index.rst  installation.rst  usage.rst
etc/: ml2_conf_arista.ini
networking_arista/: __init__.py  _i18n.py
networking_arista/common/: api.py  config.py  constants.py  db.py  db_lib.py  exceptions.py  utils.py
networking_arista/db/: README
networking_arista/db/migration/alembic_migrations/: env.py  script.py.mako
networking_arista/db/migration/alembic_migrations/versions/: 296b4e0236e0_initial_db_version.py  CONTRACT_HEAD  EXPAND_HEAD  HEADS
networking_arista/db/migration/alembic_migrations/versions/liberty/contract/: 47036dc8697a_initial_db_version_contract.py
networking_arista/db/migration/alembic_migrations/versions/liberty/expand/: 1c6993ce7db0_initial_db_version_expand.py
networking_arista/db/migration/alembic_migrations/versions/queens/contract/: 39c2eeb67116_drop_aristaprovisionednets.py  941bad5630c1_drop_aristaprovisionedvms.py  dc7bf9c1ab4d_drop_aristaprovisionedtenants.py
networking_arista/l3Plugin/: arista_l3_driver.py  l3_arista.py
networking_arista/ml2/: arista_ml2.py  arista_resources.py  arista_sec_gp.py  arista_sync.py  arista_trunk.py  mechanism_arista.py  sec_group_callback.py
networking_arista/ml2/drivers/: driver_helpers.py  type_arista_vlan.py
networking_arista/ml2/rpc/: arista_eapi.py  arista_json.py  base.py
networking_arista/ml2/security_groups/: arista_security_groups.py  security_group_sync.py  switch_helper.py
networking_arista/ml2/type_drivers/: driver_helpers.py  type_arista_vlan.py
networking_arista/tests/: test_networking_arista.py
networking_arista/tests/unit/: utils.py
networking_arista/tests/unit/common/: test_api.py  test_db_lib.py
networking_arista/tests/unit/l3Plugin/: test_arista_l3_driver.py
networking_arista/tests/unit/ml2/: mechanism_fabric.py  mechanism_ha_simulator.py  ml2_test_base.py  test_arista_mechanism_driver.py  test_arista_resources.py  test_arista_sync.py  test_arista_type_driver.py  test_mechanism_arista.py  utils.py
networking_arista/tests/unit/ml2/drivers/: test_arista_mechanism_driver.py
networking_arista/tests/unit/ml2/rpc/: test_arista_eapi_rpc_wrapper.py  test_arista_json_rpc_wrapper.py
networking_arista/tests/unit/ml2/security_groups/: sg_test_base.py  test_arista_security_groups.py  test_security_group_sync.py
networking_arista/tests/unit/ml2/type_drivers/: test_arista_type_driver.py
