[metadata]
name = networking_arista
version=2015.1.5
summary = Arista Networking drivers
description-file =
    README.rst
author = Arista Networks
author-email = openstack-dev@arista.com
home-page = https://github.com/stackforge/networking-arista/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_arista

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers = 
    arista = neutron.plugins.ml2.drivers.arista.mechanism_arista.AristaDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_arista/locale
domain = networking-arista

[update_catalog]
domain = networking-arista
output_dir = networking_arista/locale
input_file = networking_arista/locale/networking-arista.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_arista/locale/networking-arista.pot

[wheel]
universal = 1
