[metadata]
name = networking_arista
summary = Arista Networking drivers
description-file =
    README.rst
author = Arista Networks
author-email = openstack-dev@arista.com
home-page = https://github.com/openstack/networking-arista/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    networking_arista
data_files =
    etc/neutron/plugins/ml2 =
        etc/ml2_conf_arista.ini

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[entry_points]
neutron.ml2.mechanism_drivers = 
    arista = networking_arista.ml2.mechanism_arista:AristaDriver
    arista_ml2 = networking_arista.ml2.mechanism_arista:AristaDriver
neutron.service_plugins =
    arista_l3 = networking_arista.l3Plugin.l3_arista:AristaL3ServicePlugin
neutron.db.alembic_migrations =
    networking-arista = networking_arista.db.migration:alembic_migrations
neutron.ml2.type_drivers =
    arista_vlan = networking_arista.ml2.drivers.type_arista_vlan:AristaVlanTypeDriver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = networking_arista/locale
domain = networking-arista

[update_catalog]
domain = networking-arista
output_dir = networking_arista/locale
input_file = networking_arista/locale/networking-arista.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_arista/locale/networking-arista.pot

[wheel]
universal = 1
